# devaforge

./: Cargo.toml  README.md  package.json  project-version.json
.github/workflows/: ci.yml
docs/: BANKS.md
out-tsc/: index.js
out-tsc/scripts/: postinstall.js
src/: build_addon.rs  main.rs
src/addon/bank/: manage.rs  prompt.rs  scaffold.rs
src/addon/plugin/: prompt.rs  scaffold.rs
src/addon/plugin/preset/: empty.rs  synth.rs
src/bank/: manage.rs  prompt.rs  scaffold.rs
src/builder/: bank.rs  plugin.rs
src/utils/: api.rs  fs.rs  logger.rs  mod.rs  signature.rs  spinner.rs  version.rs
typescript/: index.ts
typescript/scripts/: postinstall.ts
