[package]
name = "devaforge"
version = "0.0.1"
authors = ["Devaloop <contact@devaloop.com>"]
description = "An addon generator for Devalang, the domain-specific language for sound and music."
edition = "2024"
license = "MIT"
keywords = ["music", "dsl", "audio", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "devaforge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
which = "6.0"
fs_extra = "1.3"
toml = "0.8"
wasmparser = "0.208"
inquire = "0.7.5"
indicatif = "0.17"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
